<resources>
    <string name="app_name">Crimson</string>
    <string name="prefix_india">+91</string>
    <string name="cont">Continue</string>
    <string name="welcome_to_sepia">Welcome to</string>
    <string name="app_inf_btm">App by - Team Null Void</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="change_phone">Change Phone Number</string>
    <string name="emergency">Emergency</string>
    <string name="add_crimson_user">Add Crimson User</string>
    <string name="contacts">Contacts</string>
    <string name="maps">Maps</string>
    <string name="API_KEY">AIzaSyD9A_J9R2Q5G-oycw_CzkOiR9z27y-aNQc</string>
    <string name="newUser_msg">Add Emergency contacts using bottom right button</string>
    <string name="siren">Siren</string>
    <string name="live_loc">Share Live Location</string>
    <string name="torch">Torch</string>
    <string name="me">Me</string>
    <string name="accuracy">Accuracy: %1$s</string>
    <string name="change_layer">Change Map Type</string>
    <string name="turn_on_gps">Turn on GPS</string>
    <string name="settings">Settings</string>
    <string name="perm_req">Permission required</string>
    <string name="ok">OK</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="perm_denied_msg">Some Permissions are required for application to operate normally. Please enable them in settings</string>
    <string name="cancel">Cancel</string>
    <string name="call_perm_req">Call Permission Required</string>
    <string name="locPermNeed">Location Permission Required</string>
    <string name="place_name">Place Name</string>
    <string name="place_radius">Place Radius</string>
    <string name="save">Save</string>
    <string name="name_cant_empty">Name can\'t be empty</string>
    <string name="remove">Remove</string>
    <string name="position">"Position: %1$f, %2$f"</string>
    <string name="share_live_location">Share Live Location with contacts</string>
    <string name="share">Share</string>
    <string name="live_location_sharing_is_active">Live location sharing is active</string>
    <string name="stop_sharing">Stop Sharing</string>
    <string name="end_at">"Ends at: %1$s"</string>
    <string name="sharing_location">Sharing Location</string>
    <string name="location_updates">Location Updates</string>
    <string name="msg_started_loc_share">%1$s Started Location Sharing</string>
    <string name="add_emg_contacts">Add Emergency Contacts</string>
    <string name="requests">Requests</string>
    <string name="no_new_requests">No new requests</string>
    <string name="safe">Safe</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="emergency_service_triggered">Emergency Service activated</string>
    <string name="triggered_alert">Emergency Triggered: %1$s</string>
    <string name="stop">Stop</string>
    <string name="remove_friend">Remove Contact</string>
    <string name="location_not_available">Location Not Available</string>
    <string name="location_available">Location Available</string>
    <string name="last_updated">Last Updated: %1$s</string>
    <string-array name="layers">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Hybrid</item>
    </string-array>
</resources>