<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:selectionRequired="false"
        app:singleSelection="false">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/torch"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:text="@string/torch"
            app:icon="@drawable/ic_torch"
            app:strokeColor="@color/menu_button_selector"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/siren"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="@null"
            android:text="@string/siren"
            app:icon="@drawable/ic_siren"
            app:strokeColor="@color/menu_button_selector"
            app:strokeWidth="2dp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="8dp"
        android:contentDescription="@null"
        android:text="@string/live_loc"
        app:icon="@drawable/ic_location" />

</LinearLayout>