<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/placesSheet_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_round_only_top"
    android:orientation="vertical"
    android:padding="8dp"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/places_nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/place_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/places_nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/place_radius"
            android:textColor="?colorOnSurface" />

        <com.google.android.material.slider.Slider
            android:id="@+id/places_radiusSlider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:value="100"
            android:valueFrom="80"
            android:valueTo="500"
            app:labelBehavior="withinBounds"
            app:labelStyle="@style/SliderLabelStyle" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/places_saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:text="@string/save" />

</LinearLayout>