<?xml version="1.0" encoding="UTF-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/crimsonContact_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_prev"
            app:title="Contact" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/crimsonContact_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_avatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/crimsonContact_name"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/crimsonContact_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/crimsonContact_inEmergency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/safe"
                app:chipBackgroundColor="@color/md_theme_light_primaryContainer"
                app:chipIcon="@drawable/ic_check"
                app:chipStrokeWidth="0dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/crimsonContact_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/location_not_available"
                app:chipBackgroundColor="@color/md_theme_light_primaryContainer"
                app:chipIcon="@drawable/ic_location_off"
                app:chipStrokeWidth="0dp" />

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/crimsonContact_mapSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_round_corners"
        android:backgroundTint="@color/md_theme_light_primaryContainer"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="400dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/crimsonContact_mapToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_prev"
            app:title="@string/maps" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/crimsonContact_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>